[gd_scene load_steps=10 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Map/Components/MovingPlatform.gd" type="Script" id=2]
[ext_resource path="res://ToolNodes/AudioClipPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://ToolNodes/AudioClip.gd" type="Script" id=4]
[ext_resource path="res://Map/Components/Audio/PlatformStart.wav" type="AudioStream" id=5]

[sub_resource type="Resource" id=2]
script = ExtResource( 4 )
clip = ExtResource( 5 )
volume = -7.5
pitch = 1.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 112, 60 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 112, 10 )

[node name="MovingPlatform" type="StaticBody2D"]
modulate = Color( 0.101961, 1, 0, 1 )
show_behind_parent = true
collision_layer = 2
constant_linear_velocity = Vector2( -128, 0 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 192, 64 )

[node name="AudioClipPlayer" parent="." instance=ExtResource( 3 )]
max_distance = 1000.0
attenuation = 2.14354
current_clip = SubResource( 2 )

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BotDetector" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BotDetector"]
position = Vector2( 0, 36 )
shape = SubResource( 3 )

[node name="JumpArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpArea"]
position = Vector2( 0, -24 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="BotDetector" to="." method="_on_BotDetector_body_entered"]
[connection signal="body_exited" from="BotDetector" to="." method="_on_BotDetector_body_exited"]
